tests/contract_testcases/fluentbase/primitives/address_02.sol
contract test {
            address foo = address"5GBWmgdFAMqm8ZgAHGobqDqX6tjLxJhv53ygjNtaaAn3sje";
        }
// ---- Expect: diagnostics ----
// error: 2:27-83: address literal 5GBWmgdFAMqm8ZgAHGobqDqX6tjLxJhv53ygjNtaaAn3sje incorrect length of 34
